[trunk] Added dialog shadow

--- a/plugins/about.html
+++ b/plugins/about.html
@@ -5,21 +5,14 @@
 		<title>About</title>
 		<style type="text/css" rel="stylesheet">
 			body {
-				font-size:12px;
-				line-height: 1.5;
-				font-family: "sans serif",tahoma,verdana,helvetica;
-				margin:0;
+				margin: 0;
+				font:12px/1.5 "sans serif",tahoma,verdana,helvetica;
 				background-color:#F0F0EE;
+				color:#222222;
 				overflow:hidden;
 			}
 			.main {
 				margin: 10px;
-			}
-			.title {
-				font-size: 18px;
-				font-weight: bold;
-				color: #FB7155;
-				margin-bottom: 10px;
 			}
 			.table {
 				list-style-image:none;
@@ -33,15 +26,6 @@
 				padding:0;
 				margin:0;
 				display:list-item;
-			}
-			.table li label {
-				font-weight:bold;
-			}
-			.table li input {
-				vertical-align:middle;
-			}
-			.table li img {
-				vertical-align:middle;
 			}
 		</style>
 		<script type="text/javascript">
