--- a/plugins/advtable/advtable.html
+++ b/plugins/advtable/advtable.html
@@ -5,10 +5,10 @@
 		<title>Table</title>
 		<style type="text/css" rel="stylesheet">
 			body {
-				font-size:12px;
-				font-family: "sans serif",tahoma,verdana,helvetica;
-				margin:0;
+				margin: 0;
+				font:12px/1.5 "sans serif",tahoma,verdana,helvetica;
 				background-color:#F0F0EE;
+				color:#222222;
 				overflow:hidden;
 			}
 			label {
@@ -16,7 +16,7 @@
 				margin-right: 20px;
 			}
 			.main {
-				margin: 10px;
+				margin: 0 10px;
 			}
 			.table {
 				list-style-image:none;
