--- a/plugins/link/link.html
+++ b/plugins/link/link.html
@@ -5,17 +5,17 @@
 		<title>Link</title>
 		<style type="text/css" rel="stylesheet">
 			body {
-				font-size:12px;
-				font-family: "sans serif",tahoma,verdana,helvetica;
-				margin:0;
+				margin: 0;
+				font:12px/1.5 "sans serif",tahoma,verdana,helvetica;
 				background-color:#F0F0EE;
+				color:#222222;
 				overflow:hidden;
 			}
 			label {
 				cursor:pointer;
 			}
 			.main {
-				margin: 10px;
+				margin: 0 10px;
 			}
 			.table {
 				list-style-image:none;
