--- a/plugins/wordpaste.html
+++ b/plugins/wordpaste.html
@@ -4,18 +4,21 @@
 		<meta charset="utf-8" />
 		<title>WordPaste</title>
 		<style type="text/css" rel="stylesheet">
-			html, body {
-				padding: 0;
+			body {
 				margin: 0;
-				font-family: "sans serif",tahoma,verdana,helvetica;
-				font-size:12px;
-				margin: 0px;
+				font:12px/1 "sans serif",tahoma,verdana,helvetica;
 				background-color:#F0F0EE;
+				color:#222222;
+				text-align:center;
 			}
 			#wordIframe {
-				width:390px;
-				height:250px;
-				border:1px solid #000000;
+				width:98%;
+				height:260px;
+				border:1px solid #222222;
+			}
+			.comment {
+				margin-bottom: 10px;
+				text-align: left;
 			}
 		</style>
 		<script type="text/javascript">
@@ -41,7 +44,7 @@
 		</script>
 	</head>
 	<body>
-		<div style="margin-bottom:10px;"><span id="lang.comment"></span></div>
+		<div class="comment"><span id="lang.comment"></span></div>
 		<iframe id="wordIframe" name="wordIframe" frameBorder="0"></iframe>
 	</body>
 </html>
