--- a/plugins/image/image.html
+++ b/plugins/image/image.html
@@ -5,10 +5,10 @@
 		<title>Image</title>
 		<style type="text/css" rel="stylesheet">
 			body {
-				font-size:12px;
-				font-family: "sans serif",tahoma,verdana,helvetica;
-				margin:0;
+				margin: 0;
+				font:12px/1.5 "sans serif",tahoma,verdana,helvetica;
 				background-color:#F0F0EE;
+				color:#222222;
 				overflow:hidden;
 			}
 			form {
@@ -22,7 +22,7 @@
 				cursor:pointer;
 			}
 			.main {
-				margin: 10px;
+				margin: 0 10px;
 			}
 			.tab-navi {
 				width:100%;
