--- a/test/main.html
+++ b/test/main.html
@@ -14,6 +14,11 @@
 		<script charset="utf-8" src="../src/plugin.js"></script>
 		<script>
 			KE.show({
+				id : 'content0',
+				skinsPath : '../skins/',
+				pluginsPath : '../plugins/'
+			});
+			KE.show({
 				id : 'content1',
 				skinsPath : '../skins/',
 				pluginsPath : '../plugins/',
@@ -35,7 +40,7 @@
 	<body>
 		<a href="#">超级链接</a>
 		<form name="example" method="post" action="./../php/demo.php">
-			<textarea id="test" style="width:90%;height:50px;"></textarea>
+			<textarea id="content0" style="width:90%;height:150px;"></textarea>
 			<textarea id="content1" name="content1" style="width:90%;height:250px;">
 啊<a href="wwww1">啊啊</a>啊dddddddddd<span style="color:#e53333;">ddddddddddd</span><br />
 啊<a href="wwww2">啊啊</a>啊<table width="90%" border="1">
