[trunk] Fixed bug

--- a/test/main.html
+++ b/test/main.html
@@ -22,6 +22,7 @@
 				id : 'content1',
 				skinsPath : '../skins/',
 				pluginsPath : '../plugins/',
+				newlineTag : 'br',
 				allowFileManager : true,
 				afterSetData : function(id) {
 					document.getElementById('content_html').value = KE.$('content1').value;
