[trunk] improve dialog

--- a/test/navi.html
+++ b/test/navi.html
@@ -19,6 +19,7 @@
 			<li><a href="utilities.html">Utilities</a></li>
 			<li><a href="format.html">Formatter</a></li>
 			<li><a href="event.html">Event</a></li>
+			<li><a href="dialog.html">Dialog</a></li>
 			<li><a href="focus.html">Focus</a></li>
 		</ul>
 	</body>
