--- a/test/format.html
+++ b/test/format.html
@@ -3,8 +3,8 @@
 	<head>
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 		<title>KE.format Test</title>
-		<link type="text/css" rel="stylesheet" href="qunit/qunit.css" />
-		<script type="text/javascript" charset="utf-8" src="qunit/qunit.js"></script>
+		<link type="text/css" rel="stylesheet" href="../lib/qunit/qunit.css" />
+		<script type="text/javascript" charset="utf-8" src="../lib/qunit/qunit.js"></script>
 		<script type="text/javascript" charset="utf-8" src="../src/core.js"></script>
 		<script type="text/javascript" charset="utf-8" src="format.js"></script>
 	</head>
