--- a/test/utilities.html
+++ b/test/utilities.html
@@ -1,19 +1,24 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml">
+<!doctype html>
+<html>
 	<head>
-		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
-		<title>KE.util Test</title>
-		<link type="text/css" rel="stylesheet" href="../lib/qunit/qunit.css" />
-		<script type="text/javascript" charset="utf-8" src="../lib/qunit/qunit.js"></script>
-		<script type="text/javascript" charset="utf-8" src="../src/core.js"></script>
-		<script type="text/javascript" charset="utf-8" src="utilities.js"></script>
+		<meta charset="utf-8" />
+		<title>KE Test</title>
+		<link rel="stylesheet" href="../lib/qunit/qunit.css" />
+		<script charset="utf-8" src="../lib/qunit/qunit.js"></script>
+		<script charset="utf-8" src="../src/core.js"></script>
+		<script charset="utf-8" src="../src/lang/zh_CN.js"></script>
+		<script charset="utf-8" src="../src/plugin.js"></script>
+		<script charset="utf-8" src="utilities.js"></script>
 	</head>
 	<body>
 		<div style="display:none;">
 			<div id="test01"></div>
 		</div>
-		<h1 id="qunit-header">KE.util Test</h1>
+		<h1 id="qunit-header">KE Test</h1>
 		<h2 id="qunit-userAgent"></h2>
 		<ol id="qunit-tests"></ol>
+		<br />
+		<br />
+		<textarea id="content1" name="content1" style="width:90%;height:250px;visibility:hidden;"></textarea>
 	</body>
 </html>
