[trunk] add test file

--- a/test/navi.html
+++ b/test/navi.html
@@ -21,6 +21,7 @@
 			<li><a href="event.html">Event</a></li>
 			<li><a href="dialog.html">Dialog</a></li>
 			<li><a href="focus.html">Focus</a></li>
+			<li><a href="longhtml.html">Performance</a></li>
 		</ul>
 	</body>
 </html>
