[trunk] Fixed bug where removeformat

--- a/test/utilities.html
+++ b/test/utilities.html
@@ -3,6 +3,12 @@
 	<head>
 		<meta charset="utf-8" />
 		<title>KE Test</title>
+		<link rel="stylesheet" href="../lib/firebug/firebug-lite.css" />
+		<script src="../lib/firebug/firebug-lite.js"></script>
+		<script>
+			firebug.env.css = 'firebug-lite.css';
+			firebug.env.height = 160;
+		</script>
 		<link rel="stylesheet" href="../lib/qunit/qunit.css" />
 		<script charset="utf-8" src="../lib/qunit/qunit.js"></script>
 		<script charset="utf-8" src="../src/core.js"></script>
