--- a/test/main.html
+++ b/test/main.html
@@ -65,6 +65,7 @@
 			<input type="button" name="button" value="Set HTML" onclick="javascript:KE.html('content1', '<h1>Hello</h1>');" />
 			<input type="button" name="button" value="Get Text" onclick="javascript:alert(KE.text('content1'));" />
 			<input type="button" name="button" value="Set Text" onclick="javascript:KE.text('content1', '<h1>Hello</h1>');" />
+			<input type="button" name="button" value="Get Selected HTML" onclick="javascript:alert(KE.selectedHtml('content1'));" />
 			<input type="button" name="button" value="Insert HTML" onclick="javascript:KE.insertHtml('content1', '<h1>Hello</h1>');" />
 			<input type="button" name="button" value="Append HTML" onclick="javascript:KE.appendHtml('content1', '<h1>Hello</h1>');" />
 			<input type="submit" name="button" value="Submit" />
