--- a/examples/demo-14.html
+++ b/examples/demo-14.html
@@ -13,30 +13,32 @@
 			KE.show({
 				id : 'content1'
 			});
-			function clearEditor(id) {
-				KE.util.setFullHtml(id, '');
-			}
-			function insertHtml(id, html) {
-				KE.util.focus(id);
-				KE.util.selection(id);
-				KE.util.insertHtml(id, html);
-			}
 		</script>
 	</head>
 	<body>
-		<h3>清空内容,插入内容</h3>
-		<textarea id="content1" name="content" style="width:700px;height:400px;visibility:hidden;">
-<strong>月下独酌</strong> - 李白<br />
-花间一壶酒，独酌无相亲。<br />
-举杯邀明月，对影成三人。<br />
-月既不解饮，影徒随我身。<br />
-暂伴月将影，行乐须及春。<br />
-我歌月徘徊，我舞影零乱。<br />
-醒时同交欢，醉后各分散。<br />
-永结无情游，相期邈云汉。<br />
+		<h3>调用编辑器的API</h3>
+		<textarea id="content1" name="content" style="width:700px;height:300px;visibility:hidden;">
+<p><strong>月下独酌</strong> - 李白</p>
+<p>花间一壶酒，独酌无相亲。</p>
+<p>举杯邀明月，对影成三人。</p>
+<p>月既不解饮，影徒随我身。</p>
+<p>暂伴月将影，行乐须及春。</p>
+<p>我歌月徘徊，我舞影零乱。</p>
+<p>醒时同交欢，醉后各分散。</p>
+<p>永结无情游，相期邈云汉。</p>
 </textarea>
 		<br />
-		<input type="button" name="button" value="清空内容" onclick="javascript:clearEditor('content1');" />
-		<input type="button" name="button" value="插入HTML内容" onclick="javascript:insertHtml('content1', '<strong>测试内容</strong>');" />
+		<input type="button" name="button" value="取得HTML" onclick="javascript:alert(KE.html('content1'));" />
+		<input type="button" name="button" value="判断是否为空" onclick="javascript:alert(KE.isEmpty('content1'));" />
+		<input type="button" name="button" value="取得文本" onclick="javascript:alert(KE.text('content1'));" />
+		<input type="button" name="button" value="取得文本(包含img,embed)" onclick="javascript:alert(KE.util.getPureData('content1'));" />
+		<input type="button" name="button" value="取得选中HTML" onclick="javascript:alert(KE.selectedHtml('content1'));" />
+		<br />
+		<br />
+		<input type="button" name="button" value="设置HTML" onclick="javascript:KE.html('content1', '<h3>Hello KindEditor</h3>');" />
+		<input type="button" name="button" value="设置文本" onclick="javascript:KE.text('content1', '<h3>Hello KindEditor</h3>');" />
+		<input type="button" name="button" value="插入HTML" onclick="javascript:KE.insertHtml('content1', '<strong>测试内容</strong>');" />
+		<input type="button" name="button" value="添加HTML" onclick="javascript:KE.appendHtml('content1', '<strong>Append HTML</strong>');" />
+		<input type="button" name="button" value="清空内容" onclick="javascript:KE.html('content1', '');" />
 	</body>
 </html>
