--- a/test/format.html
+++ b/test/format.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 	<head>
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
-		<title>KE.format Test</title>
+		<title>Format Test</title>
 		<link type="text/css" rel="stylesheet" href="../lib/qunit/qunit.css" />
 		<script type="text/javascript" charset="utf-8" src="../lib/qunit/qunit.js"></script>
 		<script type="text/javascript" charset="utf-8" src="../src/core.js"></script>
@@ -29,7 +29,7 @@
 			<div id="test17"><svg:a>test</svg:a></div>
 
 		</div>
-		<h1 id="qunit-header">KE.format Test</h1>
+		<h1 id="qunit-header">Format Test</h1>
 		<h2 id="qunit-userAgent"></h2>
 		<ol id="qunit-tests"></ol>
 	</body>
