--- a/test/utilities.html
+++ b/test/utilities.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<meta charset="utf-8" />
-		<title>KE Test</title>
+		<title>Editor API Test</title>
 		<link rel="stylesheet" href="../lib/firebug/firebug-lite.css" />
 		<script src="../lib/firebug/firebug-lite.js"></script>
 		<script>
@@ -20,7 +20,7 @@
 		<div style="display:none;">
 			<div id="test01"></div>
 		</div>
-		<h1 id="qunit-header">KE Test</h1>
+		<h1 id="qunit-header">Editor API Test</h1>
 		<h2 id="qunit-userAgent"></h2>
 		<ol id="qunit-tests"></ol>
 		<br />
