[trunk] Modified test files

--- a/test/api.html
+++ b/test/api.html
@@ -14,7 +14,7 @@
 		<script charset="utf-8" src="../src/core.js"></script>
 		<script charset="utf-8" src="../src/lang/zh_CN.js"></script>
 		<script charset="utf-8" src="../src/plugin.js"></script>
-		<script charset="utf-8" src="utilities.js"></script>
+		<script charset="utf-8" src="api.js"></script>
 	</head>
 	<body>
 		<div style="display:none;">
