--- a/test/navi.html
+++ b/test/navi.html
@@ -16,7 +16,7 @@
 		<ul class="inlinelist">
 			<li><a href="main.html">Main</a></li>
 			<li><a href="en.html">English</a></li>
-			<li><a href="utilities.html">Editor API</a></li>
+			<li><a href="api.html">Editor API</a></li>
 			<li><a href="format.html">Formatter</a></li>
 			<li><a href="event.html">Event</a></li>
 			<li><a href="dialog.html">Dialog</a></li>
