--- a/test/main.html
+++ b/test/main.html
@@ -14,35 +14,20 @@
 		<script charset="utf-8" src="../src/plugin.js"></script>
 		<script>
 			KE.show({
-				id : 'content0',
-				skinsPath : '../skins/',
-				pluginsPath : '../plugins/'
-			});
-			KE.show({
 				id : 'content1',
 				skinsPath : '../skins/',
 				pluginsPath : '../plugins/',
 				newlineTag : 'br',
 				allowFileManager : true,
 				afterSetData : function(id) {
-					document.getElementById('content_html').value = KE.$('content1').value;
+					KE.$('content_html').value = KE.$('content1').value;
 				}
 			});
-			function createEditor(id) {
-				KE.create(id);
-			}
-			function removeEditor(id) {
-				KE.util.setData(id);
-				KE.remove(id);
-				KE.$(id).focus();
-			}
 		</script>
 	</head>
 	<body>
-		<a href="#">超级链接</a>
 		<form name="example" method="post" action="./../php/demo.php">
-			<textarea id="content0" style="width:90%;height:150px;"></textarea>
-			<textarea id="content1" name="content1" style="width:90%;height:250px;">
+			<textarea id="content1" name="content1" style="width:90%;height:150px;">
 啊<a href="wwww1">啊啊</a>啊dddddddddd<span style="color:#e53333;">ddddddddddd</span><br />
 啊<a href="wwww2">啊啊</a>啊<table width="90%" border="1">
 	<tr>
@@ -59,8 +44,8 @@
 <br />
 			<textarea id="content_html" style="width:90%;height:100px;"></textarea>
 			<br />
-			<input type="button" name="button" value="Create Editor" onclick="javascript:createEditor('content1');" />
-			<input type="button" name="button" value="Remove Editor" onclick="javascript:removeEditor('content1');" />
+			<input type="button" name="button" value="Create Editor" onclick="javascript:KE.create('content1');" />
+			<input type="button" name="button" value="Remove Editor" onclick="javascript:KE.remove('content1');" />
 			<input type="button" name="button" value="Get HTML" onclick="javascript:alert(KE.html('content1'));" />
 			<input type="button" name="button" value="Set HTML" onclick="javascript:KE.html('content1', '<h1>Hello</h1>');" />
 			<input type="button" name="button" value="Get Text" onclick="javascript:alert(KE.text('content1'));" />
