--- a/test/main.html
+++ b/test/main.html
@@ -28,6 +28,14 @@
 	<body>
 		<form name="example" method="post" action="./../php/demo.php">
 			<textarea id="content1" name="content1" style="width:90%;height:150px;">
+<p><img height="24" alt="" src="../plugins/emoticons/0.gif" width="24" border="0" /><strong>月下独酌</strong> - 李白</p>
+<p>花间一壶酒，独酌无相亲。</p>
+<p>举杯邀明月，对影成三人。</p>
+<p>月既不解饮，影徒随我身。</p>
+<p>暂伴月将影，行乐须及春。</p>
+<p>我歌月徘徊，我舞影零乱。</p>
+<p>醒时同交欢，醉后各分散。</p>
+<p>永结无情游，相期邈云汉。</p>
 啊<a href="wwww1">啊啊</a>啊dddddddddd<span style="color:#e53333;">ddddddddddd</span><br />
 啊<a href="wwww2">啊啊</a>啊<table width="90%" border="1">
 	<tr>
