[trunk] add shadowMode

--- a/examples/demo-09.html
+++ b/examples/demo-09.html
@@ -15,6 +15,7 @@
 		<script>
 			KE.show({
 				id : 'content1',
+				shadowMode : false,
 				autoSetDataMode: false,
 				allowPreviewEmoticons : false,
 				afterCreate : function(id) {
