[trunk] fixed bug

--- a/test/dialog_iframe_document.html
+++ b/test/dialog_iframe_document.html
@@ -11,5 +11,6 @@
 	<body>
 		<input type="button" name="button" value="Resize Dialog" onclick="javascript:dialog.resize(600, 400);" />
 		<input type="button" name="button" value="Close Dialog" onclick="javascript:dialog.hide();" />
+		<input type="button" name="button" value="Close Dialog(old)" onclick="javascript:KE.layout.hide('content1');" />
 	</body>
 </html>
