[trunk] trim text when get pure text

--- a/examples/index.html
+++ b/examples/index.html
@@ -19,9 +19,9 @@
 			<li><a href="./demo-01.html" target="_blank">demo-01.html</a> (默认模式)</li>
 			<li><a href="./demo-02.html" target="_blank">demo-02.html</a> (简单模式)</li>
 			<li><a href="./demo-03.html" target="_blank">demo-03.html</a> (手动加载编辑器)</li>
-			<li><a href="./demo-04.html" target="_blank">demo-04.html</a> (默认模式为代码模式、没有指定CSS)</li>
+			<li><a href="./demo-04.html" target="_blank">demo-04.html</a> (默认模式为代码模式)</li>
 			<li><a href="./demo-05.html" target="_blank">demo-05.html</a> (手动添加CSS文件)</li>
-			<li><a href="./demo-06.html" target="_blank">demo-06.html</a> (只能调整高度, 禁止拖动改变大小)</li>
+			<li><a href="./demo-06.html" target="_blank">demo-06.html</a> (只能调整高度, 禁止调整大小)</li>
 			<li><a href="./demo-07.html" target="_blank">demo-07.html</a> (插入图片时允许浏览服务器)</li>
 			<li><a href="./demo-08.html" target="_blank">demo-08.html</a> (回车换行设置)</li>
 			<li><a href="./demo-09.html" target="_blank">demo-09.html</a> (最佳性能模式)</li>
