--- a/examples/demo-17.html
+++ b/examples/demo-17.html
@@ -7,7 +7,13 @@
 			textarea {
 				display: block;
 			}
-			.ke-icon-hello {
+			.ke-icon-example1 {
+				background-image: url(../skins/default/default.gif);
+				background-position: 0px -672px;
+				width: 16px;
+				height: 16px;
+			}
+			.ke-icon-example2 {
 				background-image: url(../skins/default/default.gif);
 				background-position: 0px -672px;
 				width: 16px;
@@ -16,20 +22,46 @@
 		</style>
 		<script charset="utf-8" src="../kindeditor.js"></script>
 		<script>
-			KE.lang['hello'] = "您好";
-			KE.plugin['hello'] = {
+			KE.lang.example1 = '插入HTML';
+			KE.plugin.example1 = {
 				click : function(id) {
-					alert("您好");
+					KE.insertHtml(id, '<strong>测试内容</strong>');
+				}
+			};
+			KE.lang.example2 = 'CLASS样式';
+			KE.plugin.example2 = {
+				click : function(id) {
+					var self = this;
+					var cmd = 'example2';
+					KE.util.selection(id);
+					var menu = new KE.menu({
+						id : id,
+						cmd : cmd,
+						width : 120
+					});
+					menu.add('红色', function() { self.exec(id, 'red'); });
+					menu.add('绿色', function() { self.exec(id, 'green'); });
+					menu.add('黄色', function() { self.exec(id, 'yellow'); });
+					menu.show();
+					this.menu = menu;
+				},
+				exec : function(id, value) {
+					var cmd = new KE.cmd(id);
+					cmd.wrap('span', [{'class': value}]);
+					KE.util.execOnchangeHandler(id);
+					this.menu.hide();
+					KE.util.focus(id);
 				}
 			};
 			KE.show({
 				id : 'content1',
-				items : ['hello']
+				cssPath : 'index.css',
+				items : ['source', 'removeformat', 'example1', 'example2']
 			});
 		</script>
 	</head>
 	<body>
-		<h3>自定义插件 - 您好</h3>
+		<h3>自定义插件 - 插入HTML、CLASS样式</h3>
 		<textarea id="content1" name="content" style="width:700px;height:300px;visibility:hidden;"></textarea>
 	</body>
 </html>
