--- a/examples/demo-03.html
+++ b/examples/demo-03.html
@@ -16,21 +16,13 @@
 					KE.util.focus(id);
 				}
 			});
-			function createEditor(id) {
-				KE.create(id);
-			}
-			function removeEditor(id) {
-				KE.util.setData(id);
-				KE.remove(id);
-				KE.$(id).focus();
-			}
 		</script>
 	</head>
 	<body>
 		<h3>手动加载编辑器</h3>
 		<textarea id="content3" name="content1" style="width:700px;height:300px;"></textarea>
 		<br />
-		<input type="button" name="button" value="加载编辑器" onclick="javascript:createEditor('content3');" />
-		<input type="button" name="button" value="卸载编辑器" onclick="javascript:removeEditor('content3');" />
+		<input type="button" name="button" value="加载编辑器" onclick="javascript:KE.create('content3');" />
+		<input type="button" name="button" value="卸载编辑器" onclick="javascript:KE.remove('content3');" />
 	</body>
 </html>
