[trunk] improve css

--- a/test/main.html
+++ b/test/main.html
@@ -4,6 +4,11 @@
 		<meta charset="utf-8" />
 		<title>KindEditor Test</title>
 		<link rel="stylesheet" href="../lib/firebug/firebug-lite.css" />
+		<style>
+			body {
+				line-height:18px;
+			}
+		</style>
 		<script src="../lib/firebug/firebug-lite.js"></script>
 		<script>
 			firebug.env.css = 'firebug-lite.css';
