[trunk] Modified demo-17

--- a/examples/demo-17.html
+++ b/examples/demo-17.html
@@ -39,9 +39,9 @@
 						cmd : cmd,
 						width : 120
 					});
-					menu.add('红色', function() { self.exec(id, 'red'); });
-					menu.add('绿色', function() { self.exec(id, 'green'); });
-					menu.add('黄色', function() { self.exec(id, 'yellow'); });
+					menu.add('红底白字', function() { self.exec(id, 'red'); });
+					menu.add('绿底白字', function() { self.exec(id, 'green'); });
+					menu.add('黄底白字', function() { self.exec(id, 'yellow'); });
 					menu.show();
 					this.menu = menu;
 				},
