--- a/test/format.html
+++ b/test/format.html
@@ -27,7 +27,10 @@
 			<div id="test15"><img src="http://www.kindsoft.net/images/logo_180_30.gif" /> test</div>
 			<div id="test16"><span style="font-family:times new roman;"><strong>test</strong></span></div>
 			<div id="test17"><svg:a>test</svg:a></div>
-
+			<div id="test18"><FONT face="Arial Black">ddd</FONT></div>
+			<div id="test19"><FONT size=7>ddd</FONT></div>
+			<div id="test20"><FONT color=#ff0000>ddd</FONT></div>
+			<div id="test21"><FONT style="BACKGROUND-COLOR: #d8d8d8" face="Arial Black" color=#ff0000 size=7>ddd</FONT></div>
 		</div>
 		<h1 id="qunit-header">Format Test</h1>
 		<h2 id="qunit-userAgent"></h2>
