[trunk] Fixed issue #115: bug where insert column left

--- a/test/main.html
+++ b/test/main.html
@@ -33,6 +33,18 @@
 	<body>
 		<form name="example" method="post" action="./../php/demo.php">
 			<textarea id="content1" name="content1" style="width:90%;height:150px;">
+<table width="90%" cellpadding="5">
+	<tr>
+		<td>表格编辑</td>
+		<td>多语言支持</td>
+		<td>更漂亮的外观</td>
+	</tr>
+	<tr>
+		<td>回显字体和颜色</td>
+		<td>表情分页和预览</td>
+		<td>新API</td>
+	</tr>
+</table>
 <pre>
 abcd
 1234
