--- a/test/main.html
+++ b/test/main.html
@@ -8,6 +8,12 @@
 			body {
 				line-height:18px;
 			}
+			th,td {
+				padding:5px;
+			}
+			table{
+				margin-bottom:1em;
+			}
 		</style>
 		<script src="../lib/firebug/firebug-lite.js"></script>
 		<script>
