[trunk] Fixed bug: issue #123

--- a/test/main.html
+++ b/test/main.html
@@ -30,7 +30,7 @@
 				id : 'content1',
 				skinsPath : '../skins/',
 				pluginsPath : '../plugins/',
-				newlineTag : 'p',
+				newlineTag : 'br',
 				allowFileManager : true,
 				afterSetData : function(id) {
 					KE.$('content_html').value = KE.$('content1').value;
