--- a/test/main.html
+++ b/test/main.html
@@ -41,6 +41,24 @@
 	<body>
 		<form name="example" method="post" action="./../php/demo.php">
 			<textarea id="content1" name="content1" style="width:90%;height:150px;">
+<p><img alt="" src="http://kindsoft.net/images/logo_180_30.gif" border="0" /> </p>
+<p></p>
+KindEditor是一套开源的HTML可视化编辑器，主要用于让用户在网站上获得所见即所得编辑效果，兼容IE、Firefox、Chrome、Safari、Opera等主流浏览器。<br />
+KindEditor使用JavaScript编写，可以无缝的与Java、.NET、PHP、ASP等程序接合。 KindEditor非常适合在CMS、商城、论坛、博客、Wiki、电子邮件等互联网应用上使用，2006年7月首次发布2.0以来，KindEditor依靠出色的用户体验和领先的技术不断扩大编辑器市场占有率，目前在国内已经成为最受欢迎的编辑器之一。 <p></p>
+<table class="ke-zeroborder" width="90%">
+<tbody>
+<tr>
+<td>&nbsp;</td>
+<td>&nbsp;</td>
+<td>&nbsp;</td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>&nbsp;</td>
+<td>&nbsp;</td>
+</tr>
+</tbody>
+</table>
 <table width="90%" cellpadding="5">
 	<tr>
 		<td>表格编辑</td>
