[trunk] Fixed bug: issue #143

--- a/plugins/advtable/advtable.html
+++ b/plugins/advtable/advtable.html
@@ -63,9 +63,9 @@
 		</style>
 		<script type="text/javascript">
 			var KE = parent.KindEditor;
-			location.href.match(/\&id=([\w-]+)/i);
+			location.href.match(/\&id=([\w\-]+)/i);
 			var id = RegExp.$1;
-			location.href.match(/\?mode=([\w-]*)/i);
+			location.href.match(/\?mode=([\w\-]*)/i);
 			var mode = RegExp.$1;
 			KE.event.ready(function() {
 				var modeBox = KE.$('mode', document);
