--- a/plugins/flash.html
+++ b/plugins/flash.html
@@ -43,7 +43,7 @@
 		</style>
 		<script type="text/javascript">
 			var KE = parent.KindEditor;
-			location.href.match(/\?id=([\w-]+)/i);
+			location.href.match(/\?id=([\w\-]+)/i);
 			var id = RegExp.$1;
 			KE.event.ready(function() {
 				KE.util.pluginLang('flash', document);
