--- a/plugins/image/image.html
+++ b/plugins/image/image.html
@@ -92,7 +92,7 @@
 		</style>
 		<script type="text/javascript">
 			var KE = parent.KindEditor;
-			location.href.match(/\?id=([\w-]+)/i);
+			location.href.match(/\?id=([\w\-]+)/i);
 			var id = RegExp.$1;
 			var fileManager = null;
 			var allowUpload = (typeof KE.g[id].allowUpload == 'undefined') ? true : KE.g[id].allowUpload;
