--- a/test/format.html
+++ b/test/format.html
@@ -31,6 +31,7 @@
 			<div id="test19"><FONT size=7>ddd</FONT></div>
 			<div id="test20"><FONT color=#ff0000>ddd</FONT></div>
 			<div id="test21"><FONT style="BACKGROUND-COLOR: #d8d8d8" face="Arial Black" color=#ff0000 size=7>ddd</FONT></div>
+			<div id="test22"><script>escape("<img src='#' />");</script></div>
 		</div>
 		<h1 id="qunit-header">Format Test</h1>
 		<h2 id="qunit-userAgent"></h2>
