[trunk] Fixed issue #153

--- a/test/main.html
+++ b/test/main.html
@@ -32,6 +32,7 @@
 				pluginsPath : '../plugins/',
 				newlineTag : 'br',
 				allowFileManager : true,
+				useContextmenu : true,
 				afterSetData : function(id) {
 					KE.$('content_html').value = KE.$('content1').value;
 				}
