--- a/plugins/wordpaste.html
+++ b/plugins/wordpaste.html
@@ -23,8 +23,7 @@
 		</style>
 		<script type="text/javascript">
 			var KE = parent.KindEditor;
-			location.href.match(/\?id=([\w\-]+)/i);
-			var id = RegExp.$1;
+			var id = KE.util.getParam(location.href, 'id');
 			KE.event.ready(function() {
 				var iframe = KE.$('wordIframe', document);
 				var iframeDoc = KE.util.getIframeDoc(iframe);
