--- a/test/main.html
+++ b/test/main.html
@@ -34,7 +34,7 @@
 				allowFileManager : true,
 				useContextmenu : true,
 				afterSetData : function(id) {
-					KE.$('content_html').value = KE.$('content1').value;
+					KE.$('content_html').value = KE.$(id).value;
 				}
 			});
 		</script>
