--- a/plugins/about.html
+++ b/plugins/about.html
@@ -30,8 +30,7 @@
 		</style>
 		<script type="text/javascript">
 			var KE = parent.KindEditor;
-			location.href.match(/\?id=([\w\-]+)/i);
-			var id = RegExp.$1;
+			var id = KE.util.getParam(location.href, 'id');
 			KE.event.ready(function() {
 				KE.util.pluginLang('about', document);
 				KE.util.hideLoadingPage(id);
