--- a/plugins/link/link.html
+++ b/plugins/link/link.html
@@ -43,8 +43,7 @@
 		</style>
 		<script type="text/javascript">
 			var KE = parent.KindEditor;
-			location.href.match(/\?id=([\w\-]+)/i);
-			var id = RegExp.$1;
+			var id = KE.util.getParam(location.href, 'id');
 			KE.event.ready(function() {
 				var hyperLink = KE.$('hyperLink', document);
 				var linkType = KE.$('linkType', document);
