--- a/test/main.html
+++ b/test/main.html
@@ -111,6 +111,8 @@ efgh
 			<input type="button" name="button" value="Insert HTML" onclick="javascript:KE.insertHtml('content1', '<h1>Hello</h1>');" />
 			<input type="button" name="button" value="Append HTML" onclick="javascript:KE.appendHtml('content1', '<h1>Hello</h1>');" />
 			<input type="button" name="button" value="Sync" onclick="javascript:KE.sync('content1');KE.$('content_html').value = KE.$('content1').value;" />
+			<input type="button" name="button" value="Focus" onclick="javascript:KE.focus('content1');" />
+			<input type="button" name="button" value="Blur" onclick="javascript:KE.blur('content1');" />
 			<input type="submit" name="button" value="Submit" />
 		</form>
 	</body>
