--- a/test/main.html
+++ b/test/main.html
@@ -35,6 +35,14 @@
 				useContextmenu : true,
 				afterChange : function(id) {
 					KE.$('content_html').value = KE.$(id).value;
+				},
+				afterFocus : function(id) {
+					KE.g[id].iframeDoc.body.style.backgroundColor = '#ddd';
+					KE.g[id].newTextarea.style.backgroundColor = '#ddd';
+				},
+				afterBlur : function(id) {
+					KE.g[id].iframeDoc.body.style.backgroundColor = '#fff';
+					KE.g[id].newTextarea.style.backgroundColor = '#fff';
 				}
 			});
 		</script>
