[trunk] Update firebug

--- a/test/focus.html
+++ b/test/focus.html
@@ -3,13 +3,7 @@
 	<head>
 		<meta charset="utf-8" />
 		<title>KindEditor Test</title>
-		<link rel="stylesheet" href="../lib/firebug/firebug-lite.css" />
-		<script src="../lib/firebug/firebug-lite.js"></script>
-		<script>
-			firebug.env.css = 'firebug-lite.css';
-			firebug.env.height = 160;
-			var KE = {};
-		</script>
+		<script src="https://getfirebug.com/firebug-lite.js"></script>
 		<script charset="utf-8" src="../src/core.js"></script>
 		<script charset="utf-8" src="../src/lang/zh_CN.js"></script>
 		<script charset="utf-8" src="../src/plugin.js"></script>
