--- a/test/api.html
+++ b/test/api.html
@@ -3,14 +3,9 @@
 	<head>
 		<meta charset="utf-8" />
 		<title>Editor API Test</title>
-		<link rel="stylesheet" href="../lib/firebug/firebug-lite.css" />
-		<script src="../lib/firebug/firebug-lite.js"></script>
-		<script>
-			firebug.env.css = 'firebug-lite.css';
-			firebug.env.height = 160;
-		</script>
 		<link rel="stylesheet" href="../lib/qunit/qunit.css" />
 		<script charset="utf-8" src="../lib/qunit/qunit.js"></script>
+		<script src="https://getfirebug.com/firebug-lite.js"></script>
 		<script charset="utf-8" src="../src/core.js"></script>
 		<script charset="utf-8" src="../src/lang/zh_CN.js"></script>
 		<script charset="utf-8" src="../src/plugin.js"></script>
