--- a/test/main.html
+++ b/test/main.html
@@ -3,7 +3,6 @@
 	<head>
 		<meta charset="utf-8" />
 		<title>KindEditor Test</title>
-		<link rel="stylesheet" href="../lib/firebug/firebug-lite.css" />
 		<style>
 			body {
 				line-height:18px;
@@ -17,11 +16,7 @@
 				margin-bottom:1em;
 			}
 		</style>
-		<script src="../lib/firebug/firebug-lite.js"></script>
-		<script>
-			firebug.env.css = 'firebug-lite.css';
-			firebug.env.height = 160;
-		</script>
+		<script src="https://getfirebug.com/firebug-lite.js"></script>
 		<script charset="utf-8" src="../src/core.js"></script>
 		<script charset="utf-8" src="../src/lang/zh_CN.js"></script>
 		<script charset="utf-8" src="../src/plugin.js"></script>
