[trunk] Fixed issue #160

--- a/test/main.html
+++ b/test/main.html
@@ -112,7 +112,7 @@ efgh
 			<input type="button" name="button" value="Get Text" onclick="javascript:alert(KE.text('content1'));" />
 			<input type="button" name="button" value="Set Text" onclick="javascript:KE.text('content1', '<h1>Hello</h1>');" />
 			<input type="button" name="button" value="Get Selected HTML" onclick="javascript:alert(KE.selectedHtml('content1'));" />
-			<input type="button" name="button" value="Insert HTML" onclick="javascript:KE.insertHtml('content1', '<h1>Hello</h1>');" />
+			<input type="button" name="button" value="Insert HTML" onclick="javascript:KE.insertHtml('content1', '<mp3>http://www.xxx.com/1.mp3</mp3>');" />
 			<input type="button" name="button" value="Append HTML" onclick="javascript:KE.appendHtml('content1', '<h1>Hello</h1>');" />
 			<input type="button" name="button" value="Sync" onclick="javascript:KE.sync('content1');KE.$('content_html').value = KE.$('content1').value;" />
 			<input type="button" name="button" value="Focus" onclick="javascript:KE.focus('content1');" />
