[trunk] Fixed issue #162

--- a/test/relative.html
+++ b/test/relative.html
@@ -18,8 +18,7 @@
   <script type="text/javascript" charset="utf-8" src="../kindeditor.js"></script>
   <script type="text/javascript">
 	KE.show({
-		id : 'content7',
-		cssPath : './index.css'
+		id : 'content7'
 	});
   </script>
 </head>
